product item and fix z-index

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -4,6 +4,7 @@
     --black-color: #000;
     --text-color: #333;
     --border-color: #dbdbdb;
+    --start-gold-color: #ffce3d;
 
     --header-height: 120px;
     --navbar-height: 28px;
@@ -34,20 +35,26 @@ html {
 .grid__row {
     display: flex;
     flex-wrap: wrap;
-    margin-left: -12px;
-    margin-right: -12px;
+    margin-left: -5px;
+    margin-right: -5px;
 }
 
 /* Test */
 .grid__column-2 {
-    padding-left: 12px;
-    padding-right: 12px;
+    padding-left: 5px;
+    padding-right: 5px;
     width: 16.6667%;
 }
 
+.grid__column-2-4 {
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 20%;
+}
+
 .grid__column-10 {
-    padding-left: 12px;
-    padding-right: 12px;
+    padding-left: 5px;
+    padding-right: 5px;
     width: calc(100% - 16.6667%);
 }
 
@@ -190,6 +197,7 @@ html {
     list-style-type: none;
     padding: 8px 0;
     display: none;
+    z-index: 1;
 }
 
 .select-input__list::after{
